--- a/ankiview/Cargo.toml
+++ b/ankiview/Cargo.toml
@@ -2,5 +2,32 @@
 name = "ankiview"
 version = "0.1.0"
 edition = "2021"
+authors = ["sysid <sysid@gmx.de>"]
+description = "Fast Anki card viewer"
+repository = "https://github.com/sysid/ankiview"
+documentation = "https://docs.rs/ankiview"
+keywords = ["anki", "cli"]
+categories = ["command-line-utilities"]
+readme = "../README.md"
+license = "BSD-3-Clause"
 
 [dependencies]
+anki = { git = "https://github.com/ankitects/anki.git", tag = "25.02" }
+anyhow = "1.0.96"
+clap = { version = "4.5.30", features = ["derive"] }
+ctor = "0.3.6"
+dirs = "6.0.0"
+html-escape = "0.2.13"
+itertools = "0.14.0"
+regex = "1.11.1"
+rstest = "0.24.0"
+serde = { version = "1.0.218", features = ["derive"] }
+tempfile = "3.17.1"
+thiserror = "2.0.11"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+
+[profile.release]
+codegen-units = 1
+lto = true
