--- a/ankiview/Cargo.toml
+++ b/ankiview/Cargo.toml
@@ -22,6 +22,7 @@ itertools = "0.14.0"
 regex = "1.11.1"
 rstest = "0.24.0"
 serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0"
 tempfile = "3.17.1"
 thiserror = "2.0.11"
 tracing = "0.1.41"
