--- a/ankiview/Cargo.toml
+++ b/ankiview/Cargo.toml
@@ -28,6 +28,14 @@ thiserror = "2.0.11"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
+# inka dependencies
+markdown-it = "0.6"
+toml = "0.8"
+sha2 = "0.10"
+walkdir = "2.4"
+reqwest = { version = "0.11", features = ["blocking"] }
+lazy_static = "1.4"
+
 [[bin]]
 name = "build_test_collection"
 path = "tests/fixtures/build_test_collection.rs"
